# TukiVet

./: .env.example  .env.prod.example  .gitignore  Makefile  PRD.md  README.md
apps/api/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260601_000000_baseline.py  20260601_010000_initial_auth.py  20260601_020000_customers_pets.py  20260601_030000_clinical_records.py  20260601_040000_vaccines.py  20260601_050000_inventory.py  20260601_060000_appointments.py  20260601_070000_prescriptions.py  20260601_080000_orders_payments_cash.py  20260601_090000_electronic_documents.py  20260601_100000_notifications.py  20260601_110000_customer_portal.py  20260612_000000_pet_document.py  20260613_000000_safe_recipient.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  ai.py  appointments.py  audit.py  auth.py  branches.py  cash.py  customers.py  encounters.py  inventory.py  invoices.py  notifications.py  orders.py  organizations.py  pets.py  portal.py  prescriptions.py  problems.py  reports.py  users.py  vaccines.py  webhooks.py
apps/api/app/core/: audit.py  errors.py  logging.py  permissions.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  appointment.py  audit_log.py  breed.py  customer.py  customer_portal.py  electronic_document.py  encounter.py  inventory.py  notification.py  order.py  organization.py  permission.py  pet.py  pet_document.py  prescription.py  problem.py  refresh_token.py  safe_recipient.py  user.py  vaccine.py
apps/api/app/schemas/: appointment.py  auth.py  common.py  customer.py  encounter.py  inventory.py  invoice.py  notification.py  order.py  organization.py  pet.py  pet_document.py  portal.py  prescription.py  problem.py  reports.py  user.py  vaccine.py
apps/api/app/services/: ai_service.py  appointment_service.py  auth_service.py  branch_service.py  customer_service.py  encounter_service.py  inventory_service.py  invoice_service.py  notification_service.py  order_service.py  organization_service.py  peru_doc.py  pet_service.py  portal_service.py  prescription_service.py  problem_service.py  reports_service.py  storage_service.py  user_service.py  vaccine_service.py
apps/api/app/services/invoicing/: __init__.py  mock_provider.py  provider.py  tukifact_provider.py
apps/api/app/services/messaging/: __init__.py  console_provider.py  provider.py  twilio_provider.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/integration/: test_appointments.py  test_auth_flow.py  test_customers.py  test_encounters.py  test_inventory.py  test_invoices.py  test_notifications.py  test_orders.py  test_pets.py  test_portal.py  test_prescriptions.py  test_reports.py  test_users_rbac.py  test_vaccines.py
apps/api/tests/unit/: test_peru_doc.py  test_security.py
docs/: ARQUITECTURA.md  CONTINUAR.md  QA.md  (+8 more)
(+125 files in other folders)
