[project]
name = "tukivet-api"
version = "0.0.1"
description = "TukiVet — backend para gestión veterinaria (Perú)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "TukiTuki Solutions SAC" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "pyjwt>=2.9,<3.0",
    "httpx>=0.28,<0.29",
    "structlog>=24.4,<25.0",
    "python-ulid>=3.0,<4.0",
    "arq>=0.26,<0.27",
    "redis>=5.0,<6.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2,<3.0",
    "boto3>=1.35,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "factory-boy>=3.3,<4.0",
    "freezegun>=1.5,<2.0",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -------- pytest --------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: pruebas unitarias rápidas",
    "integration: requieren postgres/redis",
    "e2e: pruebas extremo a extremo",
]

# -------- ruff --------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
    "ASYNC",
    "S",    # bandit
    "SIM",  # simplify
    "TCH",  # type-checking
]
ignore = [
    "S101",  # assert ok (en tests)
    "B008",  # FastAPI Depends() in defaults
    "E501",  # length manejado por formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B017", "ANN"]
"alembic/**" = ["S", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------- mypy --------
[tool.mypy]
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["arq.*", "factory.*", "structlog.*"]
ignore_missing_imports = true

# -------- coverage --------
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
